--- a/termos.html
+++ b/termos.html
@@ -12,7 +12,7 @@ Content-Type: multipart/related;
 Content-Type: text/html
 Content-ID: <frame-2121052A16B56ABDB65F44796ADF9B86@mhtml.blink>
 Content-Transfer-Encoding: binary
-Content-Location: https://kiritosshxd.github.io/Conecta4g_site/termos.html
+Content-Location: https://raw.githubusercontent.com/leitura/ospacotesmb/main/termos.html
 
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><link rel="stylesheet" type="text/css" href="cid:css-df535d10-8971-4604-9731-19462bbbbdad@mhtml.blink" />
 
